Move window inspector back to being a floating panel - application activation issues

--- a/DesktopManager/trunk/DesktopManager/Resources/Info.plist
+++ b/DesktopManager/trunk/DesktopManager/Resources/Info.plist
@@ -24,6 +24,8 @@
 	<string>DMApplication</string>
 	<key>LSUIElement</key>
 	<true/>
+	<key>LSBackgroundOnlt</key>
+	<true/>
 	<key>LSMultipleInstancesProhibited</key>
 	<true/>
 	<key>LSUIPresentationMode</key>
